--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@
 }
 
 body {
-    height: 100vh;
     background: linear-gradient(180deg, #000000 12%, #22153B 65%, #000000 100%);
     color: white;
     font-family: 'outfit';
@@ -26,6 +25,6 @@ body {
 .app-container {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 3vh;
     min-height: 100vh;
 }
