--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -1,4 +1,4 @@
-.section {
+.sections {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,6 +7,12 @@
     min-width: 500px;
     max-width: 90vw;
     margin: 0 auto;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    gap: 3vh;
 }
 
 .section div {
@@ -40,24 +46,4 @@
     font-weight: 400;
     font-size: 2vh;
     margin: 0 auto;
-}
-
-.img1 {
-    /* position: absolute; */
-    /* width: 100%; */
-    height: 30%;
-    /* bottom: 12%; */
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    background-position: center;
-    opacity: .4;
-}
-
-.img2 {
-    /* width: 30%; */
-    height: 100%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
 }
