--- a/src/Components/Sections/Section/Section.css
+++ b/src/Components/Sections/Section/Section.css
@@ -1,8 +1,4 @@
 .img1 {
-    /* position: absolute; */
-    /* width: 100%; */
-    height: 30%;
-    /* bottom: 12%; */
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: center;
@@ -10,10 +6,42 @@
 }
 
 .img2 {
-    /* width: 30%; */
-    height: 100%;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     position: absolute;
+}
+
+.section-content {
+    display: grid;
+    gap: 3vh;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.title {
+    line-height: 4.5vh;
+}
+
+.title p {
+    color: white;
+    font-family: 'Barlow', sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 5vh;
+    margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.paragraph {
+    line-height: 2.4vh;
+}
+
+.paragraph p {
+    color: white;
+    font-family: 'Barlow', sans-serif;
+    font-weight: 400;
+    font-size: 2vh;
+    margin: 0 auto;
 }
