--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -1,6 +1,7 @@
 .sections {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
     grid-gap: 20px;
     padding: 5vh 0;
     min-width: 500px;
