--- a/src/Components/Sections/SectionCarroussel/SectionCarroussel.css
+++ b/src/Components/Sections/SectionCarroussel/SectionCarroussel.css
@@ -1,5 +1,26 @@
-.parenteCarroussel {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 1vw;
+.carousel-content {
+    display: block;
+    width: 55%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.carousel-content > * {
+    margin: 3vh 0;
+}
+
+.slick-slide > div {
+    margin: 0 10px;
+}
+
+.slick-slider {
+    width: 100%;
+    height: auto;
+}
+
+.slider-container {
+    display: block;
+    height: auto;
+    grid-row: 1;
+    width: 100%; 
 }
