--- a/src/Components/SubComponents/CarrosselItem/style.css
+++ b/src/Components/SubComponents/CarrosselItem/style.css
@@ -28,39 +28,40 @@
     opacity: 0;
 }
 
-.ItemCarrosselTop {
-    position: absolute; /* Make elements positioned relative to the image */
-    text-align: center; /* Center the text horizontally */
-    top: 0; /* Position at the top of the image */
-    padding: 1vh 1vw 1vh 1vw;
+.carousel-item-top {
+    position: absolute;
+    text-align: center;
+    top: 0;
+    padding: .1vh .9vw;
 
     border-radius: 50px;
-    margin: 1vw;
+    /* margin: 1vw; */
 }
 
-.ItemCarrosselTop.live {
+.carousel-item-top.live {
     background: #CB0000;
 }
 
-.ItemCarrosselTop.notLive {
-    background: #D56C00
+.carousel-item-top.notLive {
+    background: #D56C00;
+    transform: translate(13%, 30%);
 }
 
-.ItemCarrosselTop-p {
+.carousel-item-top-p {
     color: white;
     font-family: 'Barlow', sans-serif;
     font-weight: 400;
     font-size: 2vh;
 }
 
-.ItemCarrosselBottom {
+.carousel-item-bottom {
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 20%;
 }
 
-.ItemCarrosselBottom-p {
+.carousel-item-bottom-p {
     padding-left: 1vw;
     text-align: left;
 
