--- a/src/Pages/LP/LPHeader/style.css
+++ b/src/Pages/LP/LPHeader/style.css
@@ -6,6 +6,10 @@
     margin: 20px 170px;
 }
 
+.navbar a:visited {
+    color: inherit;
+}
+
 .navbar img {
     width: 12vw;
 }
@@ -17,6 +21,7 @@
     gap: 60px;
     font-size: 20px;
     justify-content: center;
+    color: white;
 }
 
 .nav-connect {
