--- a/src/Pages/Ficha/style.css
+++ b/src/Pages/Ficha/style.css
@@ -1,9 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-
 .teste {
     background: #171717;
     height: 100vh;
@@ -36,43 +30,20 @@ body {
     min-width: 0px;
 }
 
-.main-top {
-    height: 32%;
-}
-
-.main-top img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.main-bottom {
-    padding: 3% 10%;
-    flex: 1 1 0%;
-}
-
-.main-bottom h1 {
-    font-size: 6rem;
-    color: white;
-    font-family: monospace;
-    margin: 0;
-    padding: 0;
-}
-
-.right-sidebar {
-    display: block;
+.right-sidebar, .sidebar {
+    display: inline-block;
     width: 11%;
     height: 100%;
     background-color: #1f1f1f;
     color: white;
+    overflow: auto;
 }
-
-/*******************/
 
 .character-section {
     display: flex;
     width: 100%;
     overflow: auto;
+    flex: 1;
 }
 
 .div-character-detalhes {
@@ -95,6 +66,11 @@ body {
     margin: auto;
 }
 
+.div-character-detalhes, .div-character-estatistica {
+    flex: 1 1 0%;
+    text-align: center;
+}
+
 .div-character-estatisticas {
     background: #666666;
 }
@@ -113,31 +89,6 @@ body {
     flex-direction: row;
     justify-content: center;
     margin-bottom: 2vh;
-}
-
-.div-character-pericia {
-    margin: 0 .4vw;
-}
-
-.div-character-pericia * {
-    margin: 0;
-}
-
-.div-character-detalhes, .div-character-estatistica {
-    flex: 1 1 0%;
-    text-align: center;
-}
-
-.testeMensagem {
-    color: white;
-    font-size: 8;
-    padding: 0 7px 0 5px;
-}
-
-.messages {
-    overflow: auto;
-    height: 100%;
-    width: 100%;
 }
 
 .div-character-atributo-pericia > .div-character-pericia > button {
@@ -193,6 +144,14 @@ body {
     background-color: #f3f434;
 }
 
+.div-character-pericia {
+    margin: 0 .4vw;
+}
+
+.div-character-pericia * {
+    margin: 0;
+}
+
 @keyframes fadeOut {
     0% {
       background-color: yellow;
@@ -204,4 +163,37 @@ body {
 
 .fade {
     animation: fadeOut 3s forwards;
+}
+
+.testeMensagem {
+    color: white;
+    font-size: 8;
+    padding: 0 7px 0 5px;
+}
+
+.messages {
+    overflow: auto;
+    height: 100%;
+    width: 100%;
+}
+
+.item-inventario {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20%;
+    border: white 2px solid;
+}
+
+.item-inventario > * {
+    display: block;
+}
+
+.item-inventario.checked {
+    background: green;
+}
+
+.item-inventario.notChecked {
+    background: red;
 }
