--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,8 @@ body {
 
 .app-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     height: 100vh;
     width: 100vw;
     background: linear-gradient(180deg, #000000 12%, #22153B 65%, #000000 100%);
