--- a/src/Pages/Ficha/style.module.css
+++ b/src/Pages/Ficha/style.module.css
@@ -1,4 +1,16 @@
-.main_wrapper {
+.wrapper_conteudo_abas {
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    flex: 1;
+    gap: .5%;
+    padding: 0 1vw;
+}
+
+/* primeiro sistema de abas */
+
+
+/* .main_wrapper {
     flex: 1;
     overflow: auto;
 }
@@ -6,4 +18,4 @@
 .container_aba {
     flex: 1;
     overflow-y: auto;
-}
+} */
