--- a/src/Components/FiltroFicha/style.module.css
+++ b/src/Components/FiltroFicha/style.module.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: row;
     gap: 3%;
+    justify-content: center;
 }
 
 .div_filtros input {
-    
+    border-radius: 15px;
 }
