--- a/src/Components/SubComponents/SubComponentesFicha/BarraEstatisticaDanificavel/style.module.css
+++ b/src/Components/SubComponents/SubComponentesFicha/BarraEstatisticaDanificavel/style.module.css
@@ -1,14 +1,14 @@
 .barra_estatistica {
     position: relative;
     border-radius: 5px;
-    font-size: 1rem;
     color: white;
     overflow: hidden;
+    height: 1em;
 }
 
 .cor_barra {
     position: relative;
-    height: 1.8vh;
+    height: 100%;
 
     transition: width 0.6s cubic-bezier(0.47, 1.64, 0.41, 0.8);
 }
@@ -25,8 +25,18 @@
 
 .texto_barra_estatistica {
     position: absolute;
+    height: 100%;
     top: 0;
     left: 0;
     right: 0;
     text-align: center;
+}
+
+.span_estatistica {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-size: .7em;
 }
