--- a/src/Pages/Ficha/style.module.css
+++ b/src/Pages/Ficha/style.module.css
@@ -8,10 +8,15 @@
 }
 
 .div_demo_acoes {
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
     border: 2px white solid;
     padding: 2%;
     margin: .8%;
     color: white;
+    max-height: 8vh;
+    overflow-y: auto;
 }
 
 .div_demo_acoes h1 {
