--- a/src/Pages/Ficha/Abas/Aba8/style.module.css
+++ b/src/Pages/Ficha/Abas/Aba8/style.module.css
@@ -5,7 +5,7 @@
     color: white;
 }
 
-.conteudo_efeitos table {
+.conteudo_efeitos table, th, td {
     border: 1px solid;
     border-collapse: collapse;
 }
