--- a/src/Components/FiltroFicha/style.module.css
+++ b/src/Components/FiltroFicha/style.module.css
@@ -3,8 +3,22 @@
     flex-direction: row;
     gap: 3%;
     justify-content: center;
+    width: 50%;
+    margin: auto;
+}
+
+.div_filtros > .div_filtro {
+    flex: 1;
 }
 
 .div_filtros input {
-    border-radius: 15px;
+    width: 100%;
+    height: 100%;
+    padding-left: 2%;
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 0;
+    background-color: hsl(0, 0%, 100%);
+    border-color: hsl(0, 0%, 80%);
+    color: hsl(0, 0%, 50%);
 }
