--- a/src/Components/ConsultaFicha/style.module.css
+++ b/src/Components/ConsultaFicha/style.module.css
@@ -1,3 +1,15 @@
+.conteudo_consulta {
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+    color: white;
+}
+
+.total_registros {
+    font-size: 1em;
+    color: white;
+}
+
 .div_filtros {
     display: flex;
     flex-direction: row;
@@ -7,7 +19,10 @@
     margin: auto;
 }
 
-.div_filtros > .div_filtro {
+.div_filtro {
+    display: flex;
+    flex-direction: column;
+    gap: .5vh;
     flex: 1;
 }
 
@@ -21,4 +36,12 @@
     background-color: hsl(0, 0%, 100%);
     border-color: hsl(0, 0%, 80%);
     color: hsl(0, 0%, 50%);
+}
+
+.registros {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    gap: 1%;
 }
