--- a/src/Components/ConsultaFicha/style.module.css
+++ b/src/Components/ConsultaFicha/style.module.css
@@ -2,13 +2,17 @@
     display: flex;
     flex-direction: column;
     gap: 2vh;
+}
+
+.conteudo_consulta h1, .div_filtro span {
     color: white;
 }
 
-.total_registros {
+.total_registros, .total_exibidos {
     font-size: 1em;
     color: white;
 }
+
 
 .div_filtros {
     display: flex;
@@ -44,4 +48,5 @@
     text-align: center;
     justify-content: center;
     gap: 1%;
+    color: white;
 }
