--- a/src/Components/CaixaInformacao/style.module.css
+++ b/src/Components/CaixaInformacao/style.module.css
@@ -6,7 +6,7 @@
     font-family: 'Crimson Pro', serif;
     font-variant: small-caps;
     min-width: 20vw;
-    background: #090909a8;
+    background: #090909FA;
     color: white;
     gap: 2vh;
     align-items: center;
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     gap: .7vh;
+    font-size: 1.2em;
 }
 
 .rodape_caixa_informacao {
