--- a/src/Pages/Ficha/Abas/Aba5/style.module.css
+++ b/src/Pages/Ficha/Abas/Aba5/style.module.css
@@ -5,17 +5,27 @@
     color: white;
 }
 
+.container_extremidades {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
 .inventario_personagem {
     display: flex;
     flex-direction: column;
 }
 
 .inventario_personagem table, th, td {
-    border: 1px solid;
+    border: 1px solid white;
     border-collapse: collapse;
 }
 
 .info_inventario {
     display: flex;
     flex-direction: row;
+}
+
+.item_empunhado {
+    border: 5px red solid;
 }
