Parcial (ferrando com os filtros)

--- a/src/Components/ConsultaFicha/style.module.css
+++ b/src/Components/ConsultaFicha/style.module.css
@@ -1,3 +1,9 @@
+.filtros_selecionados {
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+}
+
 .conteudo_consulta {
     display: flex;
     flex-direction: column;
