--- a/src/Components/CaixaInformacao/style.module.css
+++ b/src/Components/CaixaInformacao/style.module.css
@@ -32,3 +32,9 @@
     display: flex;
     flex-direction: column;
 }
+
+.corpo_caixa_informacao hr {
+    border: white 1px solid;
+    border-radius: 100px;
+    width: 90%;
+}
