--- a/src/Components/ConsultaFicha/style.module.css
+++ b/src/Components/ConsultaFicha/style.module.css
@@ -25,8 +25,8 @@
     flex-direction: row;
     gap: 3%;
     justify-content: center;
-    width: 50%;
     margin: auto;
+    height: 3.8rem;
 }
 
 .div_filtro {
@@ -34,19 +34,22 @@
     flex-direction: column;
     gap: .5vh;
     flex: 1;
+    width: 18vw;
 }
-
+/* 
 .div_filtros input {
     width: 100%;
     height: 100%;
     padding-left: 2%;
-    box-sizing: border-box;
-    border-radius: 4px;
     border: 0;
+    color: hsl(0, 0%, 50%);
     background-color: hsl(0, 0%, 100%);
     border-color: hsl(0, 0%, 80%);
-    color: hsl(0, 0%, 50%);
-}
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    box-sizing: border-box;
+} */
 
 .registros {
     display: flex;
