--- a/src/Components/ConsultaFicha/style.module.css
+++ b/src/Components/ConsultaFicha/style.module.css
@@ -36,26 +36,23 @@
     flex: 1;
     width: 18vw;
 }
-/* 
-.div_filtros input {
-    width: 100%;
-    height: 100%;
-    padding-left: 2%;
-    border: 0;
-    color: hsl(0, 0%, 50%);
-    background-color: hsl(0, 0%, 100%);
-    border-color: hsl(0, 0%, 80%);
-    border-radius: 4px;
-    border-style: solid;
-    border-width: 1px;
-    box-sizing: border-box;
-} */
+
+.divisao_registros {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    gap: 2vh;
+}
+
+.divisao_registros h2 {
+    margin: 0;
+}
 
 .registros {
     display: flex;
     flex-direction: row;
     text-align: center;
-    justify-content: center;
-    gap: 1%;
     color: white;
+    gap: 2%;
+    justify-content: center;
 }
