--- a/src/Components/Modal/style.module.css
+++ b/src/Components/Modal/style.module.css
@@ -18,6 +18,8 @@
     z-index: 1001;
     border-radius: 8px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+    max-height: 65%;
+    overflow-y: auto;
 }
 
 .modal_close {
