--- a/src/Components/SubComponents/SubComponentesFicha/BarraEstatisticaDanificavel/style.module.css
+++ b/src/Components/SubComponents/SubComponentesFicha/BarraEstatisticaDanificavel/style.module.css
@@ -6,6 +6,19 @@
     height: 1em;
 }
 
+.estatistica_barra {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 1vh;
+}
+
+.estatistica_barra h2 {
+    margin: 0;
+    font-size: 1em;
+    color: white;
+}
+
 .cor_barra {
     position: relative;
     height: 100%;
@@ -13,13 +26,16 @@
     transition: width 0.6s cubic-bezier(0.47, 1.64, 0.41, 0.8);
 }
 
-.cor_barra_secundaria {
+.cor_barra_secundaria, .cor_barra_secundaria_customizada {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
+}
+
+.cor_barra_secundaria {
     filter: saturate(0.2);
 }
 
