--- a/src/Layouts/LayoutInterno2/style.module.css
+++ b/src/Layouts/LayoutInterno2/style.module.css
@@ -16,8 +16,10 @@
 }
 
 .alpha_warning {
-    padding: 1%;
-    margin: 2vh auto;
+    display: flex;
+    flex-direction: row;
     border: 1px white solid;
     color: white;
+    padding: .3%;
+    margin: .5% auto 0 auto;
 }
