--- a/src/Pages/Ficha/SubPaginasFicha/SubPaginaInventario/style.module.css
+++ b/src/Pages/Ficha/SubPaginasFicha/SubPaginaInventario/style.module.css
@@ -5,6 +5,32 @@
     color: white;
 }
 
+.conteudo_inventario {
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+}
+
+.inventario_maximos {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    font-size: 3vh;
+    margin: auto;
+    gap: 1vh;
+}
+
+.inventario_categoria {
+    display: flex;
+    flex-direction: row;
+    font-size: .8em;
+    justify-content: space-evenly;
+}
+
+.barra_categoria {
+    width: 20%;
+}
+
 .extremidade {
     display: flex;
     flex-direction: column;
