--- a/src/Pages/LP/LPHeader/style.css
+++ b/src/Pages/LP/LPHeader/style.css
@@ -49,6 +49,11 @@
   animation: pulsar 1.5s ease-in-out infinite;
 }
 
+.link-tuto {
+  font-weight: bold;
+  animation: pulsarb 1.5s ease-in-out infinite;
+}
+
 @keyframes pulsar {
   15% {
       color: white;
@@ -62,6 +67,24 @@
   }
   85% {
       color: white;
+      transform: scale(1);
+      opacity: 1;
+  }
+}
+
+@keyframes pulsarb {
+  15% {
+      color: blue;
+      transform: scale(1);
+      opacity: 1;
+  }
+  50% {
+      color: white;
+      transform: scale(1.15);
+      opacity: 0.7;
+  }
+  85% {
+      color: blue;
       transform: scale(1);
       opacity: 1;
   }
