--- a/src/Pages/LP/LPHeader/style.css
+++ b/src/Pages/LP/LPHeader/style.css
@@ -13,8 +13,26 @@
 }
 
 .header-acessar {
+  display: flex;
   flex: 2 1 20%;
+  height: 100%;
   text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-connect {
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.nav-connect a {
+  display: block;
+  text-align: center;
+  width: 100%;
 }
 
 .header-logo img {
