--- a/frontend/src/Pages/EditaFicha/style.module.css
+++ b/frontend/src/Pages/EditaFicha/style.module.css
@@ -12,12 +12,6 @@
     margin: 0;
 }
 
-.editando_ficha .prosseguir {
-    width: 6%;
-    margin: auto;
-    height: 4vh;
-}
-
 .editando_ficha input {
     width: 20%;
     height: 4vh;
@@ -93,4 +87,16 @@
     border: 1px white solid;
     gap: .6vh;
     padding: 1%;
+}
+
+.botoes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5%;
+}
+
+.editando_ficha .prosseguir {
+    width: 6%;
+    height: 4vh;
 }
