Parcial (alterando de onde pega as estatisticas somadas para ganhos de estatisticas fixas)

--- a/frontend/src/Pages/PaginaInternaTeste/style.module.css
+++ b/frontend/src/Pages/PaginaInternaTeste/style.module.css
@@ -49,3 +49,16 @@
 .remover_ficha {
     cursor: pointer;
 }
+
+/* */
+
+.modal_criacao_ficha {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+}
+
+.modal_criacao_ficha h1 {
+    margin: 0;
+}
