Parcial usando Popover e Dialog

--- a/frontend/src/Components/CaixaInformacao/style.module.css
+++ b/frontend/src/Components/CaixaInformacao/style.module.css
@@ -65,3 +65,12 @@
     background-color: white;
     height: 2px;
 }
+
+/**/
+
+.acoes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10%;
+}
