--- a/frontend/src/Components/LayoutAbas/style.module.css
+++ b/frontend/src/Components/LayoutAbas/style.module.css
@@ -26,19 +26,22 @@
 }
 
 .barra_superior_conteudo_aba {
-    height: 2vh;
-    background-color:deepskyblue;
-    text-align: end;
-    padding: 0 .3%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: deepskyblue;
+    box-sizing: border-box;
+    padding: 0;
 }
 
 .botao_fechar_aba {
     display: inline-flex;
-    height: 90%;
+    /* height: 90%; */
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.1);
+    /* background-color: rgba(255, 255, 255, 0.1); */
+    background-color: white;
     border: 1px solid rgba(255, 255, 255, 0.5);
-    color: rgba(255, 255, 255, 0.8);
+    /* color: rgba(255, 255, 255, 0.8); */
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     font-weight: bold;
     cursor: pointer;
