--- a/frontend/src/Pages/Ficha/SubPaginasFicha/SubPaginaEstatisticasDanificaveis/style.module.css
+++ b/frontend/src/Pages/Ficha/SubPaginasFicha/SubPaginaEstatisticasDanificaveis/style.module.css
@@ -1,7 +1,32 @@
+.div_estatisticas {
+    display: flex;
+    flex-direction: column;
+}
+
 .estatisticas_barras {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 10%;
     font-size: 3vh;
+}
+
+.estatisticas_buffaveis {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    color: white;
+}
+
+.estatisticas_buffaveis > * {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    flex: 1;
+}
+
+.reducoes_dano table, th, td {
+  border: 1px solid;
+  border-collapse: collapse;
 }
