--- a/frontend/src/Recursos/Componentes/Popover/style.module.css
+++ b/frontend/src/Recursos/Componentes/Popover/style.module.css
@@ -61,7 +61,7 @@ input {
 
 .popover_close:hover { background-color: var(--violet-4); }
 .popover_close:focus { box-shadow: 0 0 0 2px var(--violet-7); }
-.popover_trigger button {
+/* .popover_trigger button {
     all: unset;
 	font-family: inherit;
 	border-radius: 100%;
@@ -70,7 +70,7 @@ input {
 	justify-content: center;
 	color: var(--violet-11);
 	box-shadow: 0 2px 10px var(--black-a7);
-}
+} */
 
 .popover_trigger button:hover { background-color: var(--violet-3); }
 .popover_trigger button:focus { box-shadow: 0 0 0 2px black; }
