--- a/frontend/src/Pages/Ficha/SubPaginasFicha/SubPaginaEstatisticasDanificaveis/style.module.css
+++ b/frontend/src/Pages/Ficha/SubPaginasFicha/SubPaginaEstatisticasDanificaveis/style.module.css
@@ -1,6 +1,7 @@
 .div_estatisticas {
     display: flex;
     flex-direction: column;
+    gap: 2vh;
 }
 
 .estatisticas_barras {
@@ -14,6 +15,8 @@
 .estatisticas_buffaveis {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    gap: 10%;
     width: 100%;
     height: 100%;
     color: white;
@@ -22,8 +25,7 @@
 .estatisticas_buffaveis > * {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    flex: 1;
+    width: 100%;
 }
 
 .reducoes_dano table, th, td {
