--- a/frontend/src/Recursos/Componentes/ModalDialog/style.module.css
+++ b/frontend/src/Recursos/Componentes/ModalDialog/style.module.css
@@ -35,6 +35,7 @@
 
     font-family: 'Crimson Pro', serif;
     font-variant: small-caps;
+	gap: 1vh;
 }
 
 .dialog_conteudo:focus { outline: none; }
