--- a/frontend/src/Recursos/Componentes/JanelaNotificacao/style.module.css
+++ b/frontend/src/Recursos/Componentes/JanelaNotificacao/style.module.css
@@ -31,6 +31,11 @@
     justify-content: center;
 }
 
+.janela_avisos_botao svg {
+    width: 100%;
+    height: 100%;
+}
+
 .janela_avisos_conteudo {
     display: flex;
     flex-direction: column;
@@ -57,4 +62,15 @@
 .mensagem_notificacao {
     display: flex;
     flex-direction: row;
+    align-items: center;
+}
+
+.icone_notificacao {
+    height: 1rem;
+    aspect-ratio: 1;
+}
+
+.icone_notificacao svg {
+    width: 100%;
+    height: 100%;
 }
