--- a/frontend/src/Recursos/Componentes/JanelaNotificacao/style.module.css
+++ b/frontend/src/Recursos/Componentes/JanelaNotificacao/style.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 300px;
+    width: 20%;
     background: #0B0D0E;
     color: white;
     padding: 20px;
@@ -63,6 +63,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 2%;
 }
 
 .icone_notificacao {
